[build-system]
requires = ["setuptools", "setuptools-scm"]
build-backend = "setuptools.build_meta"

[project]
name = "gustos-meresco"
authors = [
    {name = "Thijs Janssen", email = "thijs@seecr.nl"},
    {name = "Johan Jonkers", email = "johan@seecr.nl"},
]
description = "Gustos components for Meresco based projects."
requires-python = ">=3.13"
license = {file = "COPYING"}
classifiers = [
    "License :: OSI Approved :: GNU General Public License v2 (GPLv2)",
    "Programming Language :: Python :: 3",
]
dynamic = ["version"]

[tool.setuptools_scm]
version_file = "gustos_meresco/_version.py"

[tool.setuptools.packages.find]
where = ["."]

[tool.isort]
profile = "black"

[seecr.pytools]
system-packages = true

[seecr]
build-tool = "seecr-packages-make"
